--- a/week-3/26-checkout-groups/index.html
+++ b/week-3/26-checkout-groups/index.html
@@ -37,7 +37,45 @@
         <div class="checkout">
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
-            <!-- Add the form fields here -->
+            <fieldset>
+              <legend>Billing Address</legend>
+              <label>
+                <input type="text" name="Address Line 1" />
+                Address 1
+              </label>
+              <label>
+                <input type="text" name="Address Line 2" />
+                Address 2
+              </label>
+              <label>
+                <input type="text" name="Postcode" />
+                Postcode
+              </label>
+              <label>
+                <input type="text" name="City" />
+                City
+              </label>
+            </fieldset>
+
+            <fieldset>
+              <legend>Delivery Address</legend>
+              <label>
+                <input type="text" name="Address Line 1-Delivery" />
+                Address 1
+              </label>
+              <label>
+                <input type="text" name="Address Line 2-Delivery" />
+                Address 2
+              </label>
+              <label>
+                <input type="text" name="Postcode-Delivery" />
+                Postcode
+              </label>
+              <label>
+                <input type="text" name="City-Delivery" />
+                City
+              </label>
+            </fieldset>
 
             <button type="submit">Complete Purchase</button>
           </form>
